--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cloudinary": "^1.13.2"
+    "cloudinary": "^1.13.2",
+    "xlsx-to-json-lc": "^0.5.0"
   }
 }
